@@ -1,4 +1,4 @@
-/* $Id: tty.c,v 1.71 2009-02-11 23:16:45 nicm Exp $ */
+/* $Id: tty.c,v 1.72 2009-02-12 00:03:58 nicm Exp $ */
 
 /*
  * Copyright (c) 2007 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -587,16 +587,18 @@ tty_cmd_reverseindex(struct tty *tty, struct window_pane *wp, unused va_list ap)
 		if (s->old_cy == s->old_rupper) {
 			for (i = s->old_rupper; i <= s->old_rlower; i++)
 				tty_draw_line(tty, wp, i);
-			return;
 		}
+		return;
 	}
 
 	tty_reset(tty);
 
  	tty_region(tty, s->old_rupper, s->old_rlower, wp->yoff);
 
-	tty_cursor(tty, s->old_cx, s->old_cy, wp->yoff);
-	tty_putcode(tty, TTYC_RI);
+	if (s->old_cy == s->old_rupper) {
+		tty_cursor(tty, s->old_cx, 0, wp->yoff);
+		tty_putcode(tty, TTYC_RI);
+	}
 }
 
 void
